# bioscan

./: Procfile  README.md  models.py  nixpacks.toml  pyproject.toml  railway.toml  routes.py
bioscan/: __init__.py  app.py  gunicorn_config.py  models.py  pdf_parser.py  pdf_report.py  routes.py  tanita_parser.py  tanita_pdf_parser.py  wsgi.py
docs/: como-subir-no-github.md
static/: index.html  login.html  reset-password.html
tests/: conftest.py  test_bioscan.py
