[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioscan"
version = "0.1.0"
description = "Plataforma de análise de bioimpedância Tanita com foco em healthspan"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "BioScan Healthspan" }]
requires-python = ">=3.11"

keywords = ["bioimpedância", "healthspan", "tanita", "composição corporal", "flask"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Flask>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "PyJWT>=2.8",
    "Werkzeug>=3.0",
    "groq>=0.9",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "reportlab>=4.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/r4f4marques/bioscan"
Issues     = "https://github.com/r4f4marques/bioscan/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bioscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
